# zkllvm-assigner

./: .gitignore  CMakeLists.txt
.github/workflows/: pull_request.yml
example/: arithmetics_example.ll
include/nil/blueprint/: asserts.hpp  assigner.hpp  call_gen_assignments.hpp  component_creation_parameters.hpp  component_handler_input_wrapper.hpp  component_manifest_utilities.hpp  extract_constructor_parameters.hpp  gep_resolver.hpp  handle_component.hpp  input_reader.hpp  layout_resolver.hpp  logger.hpp  (+12 more)
test/: CMakeLists.txt  allocator_test.cpp  assigner_test.cpp  input_reader_test.cpp  memory_test.cpp  run_tests.py  segment_map_test.cpp  segment_test.cpp  signature_parser.cpp  signature_parser_test.cpp  test_script.py  type_layout_test.cpp  var_concat_test.cpp  var_trim_test.cpp
test/data/: ed25519_non_native_field_add.ll  ed25519_non_native_field_add_0.crct  ed25519_non_native_field_add_0.inp  ed25519_non_native_field_add_0.tbl  ed25519_non_native_field_add_1.crct  ed25519_non_native_field_add_1.tbl  ed25519_non_native_field_add_2.crct  ed25519_non_native_field_add_2.inp  ed25519_non_native_field_add_2.tbl  ed25519_non_native_field_mul.ll  ed25519_non_native_field_mul_0.crct  ed25519_non_native_field_mul_0.inp  ed25519_non_native_field_mul_0.tbl  ed25519_non_native_field_mul_1.crct  ed25519_non_native_field_mul_1.inp  ed25519_non_native_field_mul_1.tbl  ed25519_non_native_field_mul_2.crct  ed25519_non_native_field_mul_2.inp  ed25519_non_native_field_mul_2.tbl  ed25519_non_native_field_sub.ll  ed25519_non_native_field_sub_0.inp  ed25519_non_native_field_sub_0.tbl  ed25519_non_native_field_sub_1.crct  ed25519_non_native_field_sub_1.inp  ed25519_non_native_field_sub_1.tbl  ed25519_non_native_field_sub_2.crct  ed25519_non_native_field_sub_2.inp  ed25519_non_native_field_sub_2.tbl  pallas_native_curve_add.ll  pallas_native_curve_add_0.crct  pallas_native_curve_add_0.inp  pallas_native_curve_add_0.tbl  pallas_native_curve_add_1.crct  pallas_native_curve_add_1.inp  pallas_native_curve_add_1.tbl  pallas_native_curve_add_2.inp  pallas_native_curve_add_2.tbl  pallas_native_curve_mul.ll  pallas_native_curve_mul_0.crct  pallas_native_curve_mul_0.inp  (+34 more)
test/ir/: input_reader_test.ll
(+70 files in other folders)
